# bulk_coarsen

./: .gitignore  CMakeLists.txt
src/: int_coarsen.cpp  int_coarsen.h  main.cpp
